--- a/index.html
+++ b/index.html
@@ -106,8 +106,10 @@ jQuery(document).ready(function($) {
 
         <div class="brfloat"> </div>
         <table>
-          <tr><td> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
-              <button type="button" onClick="undof(this)">Undo</button></td>
+          <tr>
+            <td> &nbsp;&nbsp;&nbsp;&nbsp;
+              <button type="button" onClick="applyOp(this,Math.pow)"><img src="images/power.png" alt="^" /></button></td>
+            <td><button type="button" onClick="undof(this)">Undo</button></td>
             <td><button type="button" onClick="redof(this)">Redo</button></td></tr>
         </table>
         <table>
@@ -207,9 +209,11 @@ jQuery(document).ready(function($) {
           </table>
         </div>
         <div class="brfloat"> </div>
-     <table>
-          <tr><td> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
-              <button type="button" onClick="undof(this)">Undo</button></td>
+        <table>
+          <tr>
+            <td> &nbsp;&nbsp;&nbsp;&nbsp;
+              <button type="button" onClick="applyOp(this,Math.pow)"><img src="images/power.png" alt="^" /></button></td>
+            <td><button type="button" onClick="undof(this)">Undo</button></td>
             <td><button type="button" onClick="redof(this)">Redo</button></td></tr>
         </table>
         <table>
@@ -309,9 +313,11 @@ jQuery(document).ready(function($) {
         </div>
 
         <div class="brfloat"> </div>
-     <table>
-          <tr><td> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
-              <button type="button" onClick="undof(this)">Undo</button></td>
+        <table>
+          <tr>
+            <td> &nbsp;&nbsp;&nbsp;&nbsp;
+              <button type="button" onClick="applyOp(this,Math.pow)"><img src="images/power.png" alt="^" /></button></td>
+            <td><button type="button" onClick="undof(this)">Undo</button></td>
             <td><button type="button" onClick="redof(this)">Redo</button></td></tr>
         </table>
         <table>
@@ -412,9 +418,11 @@ jQuery(document).ready(function($) {
         </div>
 
         <div class="brfloat"> </div>
-     <table>
-          <tr><td> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
-              <button type="button" onClick="undof(this)">Undo</button></td>
+         <table>
+          <tr>
+            <td> &nbsp;&nbsp;&nbsp;&nbsp;
+              <button type="button" onClick="applyOp(this,Math.pow)"><img src="images/power.png" alt="^" /></button></td>
+            <td><button type="button" onClick="undof(this)">Undo</button></td>
             <td><button type="button" onClick="redof(this)">Redo</button></td></tr>
         </table>
         <table>
